--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -55,7 +55,9 @@
 
               <div class="cd-timeline-content">
                 <h2>バドミントン</h2>
-                <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆</p>
+                <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆<br>
+                <br>
+                -悠</p>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -78,8 +80,10 @@
 
               <div class="cd-timeline-content">
                 <h2>誕生日</h2>
-                <p>アレックスはこれまでに何度も私に最高の思い出をプレゼントしてくれましたが、中でも私のお気に入りは２０１５年の、私のシアトルでの初めての誕生日です。当時学校の授業に加え、ワシントン大学編入のためにTOEFLの勉強もしていて忙しかったので、誕生日パーティーは必要ないと伝えていました。でもアレックスは私に内緒で仕事の休みをとってくれていて、当日サプライズで私の教室にケーキと風船とプレゼントを持って来てくれました。授業後先生に質問してる時に後ろからハグされてびっくり(笑)こういうの映画やドラマの中だけかと思ってたので、とっても驚いたし嬉しかったです(*^_^*)
-</p>
+                <p>アレックスはこれまでに何度も私に最高の思い出をプレゼントしてくれましたが、中でも私のお気に入りは２０１５年の、私のシアトルでの初めての誕生日です。当時学校の授業に加え、ワシントン大学編入のためにTOEFLの勉強もしていて忙しかったので、誕生日パーティーは必要ないと伝えていました。でもアレックスは私に内緒で仕事の休みをとってくれていて、当日サプライズで私の教室にケーキと風船とプレゼントを持って来てくれました。授業後先生に質問してる時に後ろからハグされてびっくり(笑)こういうの映画やドラマの中だけかと思ってたので、とっても驚いたし嬉しかったです(*^_^*)<br>
+                <br>
+                -悠
+                </p>
                 <span class="cd-date">Jan 14 2015</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -102,9 +106,9 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Title of section 5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                <span class="cd-date">Feb 18</span>
+                <h2>ポットラック（料理持ち寄りイベント</h2>
+                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">October 26 2014</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -114,18 +118,49 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Final Section</h2>
-                <p>This is the content of the last section</p>
-                <span class="cd-date">Feb 26</span>
+                <h2>ポットラック（料理持ち寄りイベント）</h2>
+                <p>初めて会った時、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
+                <br>
+                -アレックス
+                </p>
+                <span class="cd-date">Oct 26 2014</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+              </div> <!-- cd-timeline-img -->
+
+              <div class="cd-timeline-content">
+                <h2>日本旅行</h2>
+                <img style="width: 100%;" src="img/timeline/japan.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">Sept 23 2015</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-movie">
+                <img src="img/cd-icon-movie.svg" alt="Movie">
+              </div> <!-- cd-timeline-img -->
+
+              <div class="cd-timeline-content">
+                <h2>日本旅行</h2>
+                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があります。あ、それから大阪のUSJではハロウィンイベントを体験することができました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
+                <br>
+                -アレックス</p>
+                <span class="cd-date">Sept 23 2015</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+
           </section> <!-- cd-timeline -->
         </div>
       </section>
 
       <section id="photos">
         <div class="content">
-          <h2>思い出の写真☆</h2>
+          <h2>思い出の写真たち☆ </h2>
           <ul class="rslides min-height-600">
             <li ><img src="img/slideshow/alex-birthday.jpg" class="slider-img" ></li>
             <li ><img src="img/slideshow/anna-farewell.jpg" class="slider-img" ></li>
@@ -141,7 +176,7 @@
       <section id="when-where">
         <div class="content">
           <h2>開催日時・場所</h2>
-          <h3>開催日時</h3>
+          <h3>日時</h3>
           <div style="text-align:center">
             2017年8月6日(日)　17:00-19:00
 
@@ -150,7 +185,7 @@
           <div style="text-align:center">
             アンジェパティオ<br>
             東京都渋谷区南平台町12-1<br>
-            03-3476-7712<br><br>
+            ☎ 03-3476-7712<br><br>
           </div>
           <ul class="rslides">
             <li><img src="img/angepatio.png"></li>
@@ -163,13 +198,12 @@
 
         <form class="form-style-6" method="post">
           <p>
-          ご出席できる方はお名前とメールアドレス、参加人数を記入してください。<br>
-          食物アレルギーなど注意事項がありましたらメッセージ欄にご記入下さい。<br>
-          その他メッセージがありましたら何でもご自由にお書き下さい。<br>
-          パーティーは会費制で参加費一人１万円(13歳以上)になります。<br>
-          ご祝儀は不要です。<br>
-          <br>
-          当日お会いできるのを楽しみにしています！<br>
+            ご出席できる方はお名前とメールアドレス、参加人数を記入してください。<br>
+            食物アレルギーなど注意事項がありましたらメッセージ欄にご記入下さい。<br>
+            その他メッセージがありましたら何でもご自由にお書き下さい。<br>
+            パーティーは会費制になります。ご祝儀は不要です。<br>
+            <br>
+            当日お会いできるのを楽しみにしています！
           </p>
           <hr>
           <div>
