--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ header {
   text-align: center;
   width: 100%;
   height: 90vh;
-  background: url("../img/slideshow/tree.jpg") no-repeat center center fixed; 
+  background: url("../img/slideshow/tree.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -159,38 +159,25 @@ header nav ul li {
   }
 }
 
-/*#RSVP {
-  background: #FFCDD2;
+#RSVP {
+  background: #FF9999;
 }
 
 #photos {
-  background: #FFCDD2;
+  background: #FF9999;
 
 }
 
 #when-where {
-  background: #CC697C;
+  background: #A35C3D;
 
 }
 
 #our-story {
-  background: #CC697C;
- 
-}*/
-
-#RSVP {
-  background: deepSkyBlue;
-}
-
-#photos {
-  background: orange;
+  background: #A35C3D;
 
 }
 
-#when-where {
-  background: yellow;
-
-}
 
 
 
