--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -9,11 +9,11 @@
     <link rel="stylesheet" type="text/css" href="css/hamburger.css">
     <link rel="stylesheet" type="text/css" href="css/slideshow.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:url"                content="http://www.alexandharuka.com/jp" />
-    <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="Alex & Haruka" />
-    <meta property="og:description"        content="Although the future is never certain, what is certain is our love for each other." />
-    <meta property="og:image"              content="http://www.alexandharuka.com/img/slideshow/tree.jpg" />
+    <meta name="url"                content="http://www.alexandharuka.com/jp" />
+    <meta name="type"               content="website" />
+    <meta name="title"              content="Alex & Haruka" />
+    <meta name="description"        content="Although the future is never certain, what is certain is our love for each other." />
+    <meta name="image"              content="http://www.alexandharuka.com/img/slideshow/tree.jpg" />
     <!-- favicon -->
     <link rel="icon"
       type="image/png"
