--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -24,6 +24,7 @@
       <header id="home">
         <div id="img-shade">
           <h1>Alex & Haruka's Wedding</h1>
+
           <div class="hamburger-icon" id="icon"> <!-- hamburger icon -->
             <div class="icon-1" id="a"></div>
             <div class="icon-2" id="b"></div>
@@ -43,7 +44,7 @@
               <li><a href="#home">ホーム</a></li><br>
               <li><a href="#our-story">私たちについて</a></li><br>
               <li><a href="#when-where">開催日時・場所</a></li><br>
-              <li><a href="#RSVP">参加予約￥</a></li>
+              <li><a href="#RSVP">参加予約</a></li>
             </ul>
           </nav>
           </div>
@@ -53,18 +54,6 @@
         <div class="content">
           <h2>私たちについて</h2>
           <section id="cd-timeline" class="cd-container">
-            <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-picture">
-                <img src="img/cd-icon-picture.svg" alt="Picture">
-              </div> <!-- cd-timeline-img -->
-
-              <div class="cd-timeline-content">
-                <h2>バドミントン</h2>
-                <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆<br>
-                <br>
-                -悠</p>
-              </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-movie">
@@ -72,11 +61,29 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>バドミントン</h2>
-                <img style="width: 100%;" src="img/timeline/wakaba.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">Lots of fun with Wakaba</span>
+                <h2>ポットラック（料理持ち寄りイベント）</h2>
+                <p>初めて会った時、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
+                <br>
+                -アレックス
+                </p>
+                <span class="cd-date">Oct 26 2014</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
+
+
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+              </div> <!-- cd-timeline-img -->
+
+              <div class="cd-timeline-content">
+                <h2>ポットラック（料理持ち寄りイベント)</h2>
+                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">October 26 2014</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+           
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-picture">
@@ -105,17 +112,7 @@
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
-            <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-location.svg" alt="Location">
-              </div> <!-- cd-timeline-img -->
 
-              <div class="cd-timeline-content">
-                <h2>ポットラック（料理持ち寄りイベント</h2>
-                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">October 26 2014</span>
-              </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-movie">
@@ -123,14 +120,14 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>ポットラック（料理持ち寄りイベント）</h2>
-                <p>初めて会った時、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
+                <h2>日本旅行</h2>
+                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があります。あ、それから大阪のUSJではハロウィンイベントを体験することができました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
                 <br>
-                -アレックス
-                </p>
-                <span class="cd-date">Oct 26 2014</span>
+                -アレックス</p>
+                <span class="cd-date">Sept 23 2015</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
+
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-location">
@@ -144,17 +141,30 @@
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
+
+
+             <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+              </div> <!-- cd-timeline-img -->
+
+              <div class="cd-timeline-content">
+                <h2>バドミントン</h2>
+                <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆<br>
+                <br>
+                -悠</p>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-movie">
                 <img src="img/cd-icon-movie.svg" alt="Movie">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>日本旅行</h2>
-                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があります。あ、それから大阪のUSJではハロウィンイベントを体験することができました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
-                <br>
-                -アレックス</p>
-                <span class="cd-date">Sept 23 2015</span>
+                <h2>バドミントン</h2>
+                <img style="width: 100%;" src="img/timeline/wakaba.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">Lots of fun with Wakaba</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
