--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -200,7 +200,7 @@
           <div style="text-align:center">
             アンジェパティオ<br>
             東京都渋谷区南平台町12-1<br>
-            ☎ 03-3476-7712<br><br>
+            TEL: 03-3476-7712<br><br>
           </div>
           <ul class="rslides">
             <li><img src="img/angepatio.png"></li>
