--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -56,12 +56,12 @@
           <section id="cd-timeline" class="cd-container">
 
             <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-movie">
-                <img src="img/cd-icon-movie.svg" alt="Movie">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>ポットラック（料理持ち寄りイベント）</h2>
+                <h2>ポットラック</h2>
                 <p>初めて会った時、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
                 <br>
                 -アレックス
@@ -72,22 +72,22 @@
 
 
             <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-location.svg" alt="Location">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>ポットラック（料理持ち寄りイベント)</h2>
+                <h2>ポットラック</h2>
                 <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">October 26 2014</span>
+                <span class="cd-date">Potluck at the yellow house</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
            
 
             <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-picture">
-                <img src="img/cd-icon-picture.svg" alt="Picture">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
@@ -101,51 +101,51 @@
             </div> <!-- cd-timeline-block -->
 
             <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-location.svg" alt="Location">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
                 <h2>誕生日</h2>
                 <img style="width: 100%;" src="img/timeline/birthday.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">Lots of fun today</span>
+                <span class="cd-date">happiest birthday ever!</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
-
-
-            <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-movie">
-                <img src="img/cd-icon-movie.svg" alt="Movie">
-              </div> <!-- cd-timeline-img -->
-
-              <div class="cd-timeline-content">
-                <h2>日本旅行</h2>
-                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があります。あ、それから大阪のUSJではハロウィンイベントを体験することができました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
-                <br>
-                -アレックス</p>
-                <span class="cd-date">Sept 23 2015</span>
-              </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
 
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-location.svg" alt="Location">
+                <img src="img/cd-icon-Location.svg" alt="Location">
+              </div> <!-- cd-timeline-img -->
+
+              <div class="cd-timeline-content">
+                <h2>日本旅行</h2>
+                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があると思います。日本では大阪のUSJ、池袋のポケモンセンターや秋葉原のメイドカフェに行ったり、本場のお寿司を食べたり、水族館に行ったり、川でのんびりしたり、他にもたくさんのことをしました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
+                <br>
+                -アレックス</p>
+                <span class="cd-date">Sept 5-26 2015</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+
+
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
                 <h2>日本旅行</h2>
                 <img style="width: 100%;" src="img/timeline/japan.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">Sept 23 2015</span>
+                <span class="cd-date">We took a photo with this mascot!</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
 
 
              <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-picture">
-                <img src="img/cd-icon-picture.svg" alt="Picture">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
@@ -153,12 +153,13 @@
                 <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆<br>
                 <br>
                 -悠</p>
+                <span class="cd-date">2014-present</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
             <div class="cd-timeline-block">
-              <div class="cd-timeline-img cd-movie">
-                <img src="img/cd-icon-movie.svg" alt="Movie">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
