--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -62,7 +62,7 @@
 
               <div class="cd-timeline-content">
                 <h2>ポットラック</h2>
-                <p>初めて会った時、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
+                <p>初めて会ったのは学生団体主催のポットラック(料理持ち寄りイベント）でした。最初、別の人と勘違いしてしまいましたが（しかも19歳かと思った笑）、まさか理想の女性に出会えるとは思ってませんでした。ポットラックで軽く会話した後、皆でバーに行きました。僕は車をどこに停めたか忘れてしまい、悠と一緒に探し回りました(笑)。その日の夜、出会えてとても嬉しかったことを伝えました。今でも、一緒にいると同じように嬉しい気持ちになります。今ではよく僕たちがポットラックを開いて、二人一緒にたくさんの友達と楽しい時間を過ごしています。<br>
                 <br>
                 -アレックス
                 </p>
@@ -78,7 +78,7 @@
 
               <div class="cd-timeline-content">
                 <h2>ポットラック</h2>
-                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Lots of fun with Wakaba">
+                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Potluck at the yellow house">
                 <span class="cd-date">Potluck at the yellow house</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -124,7 +124,7 @@
                 <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があると思います。日本では大阪のUSJ、池袋のポケモンセンターや秋葉原のメイドカフェに行ったり、本場のお寿司を食べたり、水族館に行ったり、川でのんびりしたり、他にもたくさんのことをしました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
                 <br>
                 -アレックス</p>
-                <span class="cd-date">Sept 5-26 2015</span>
+                <span class="cd-date">Sept 2015</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
