--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -137,7 +137,7 @@
               <div class="cd-timeline-content">
                 <h2>日本旅行</h2>
                 <img style="width: 100%;" src="img/timeline/japan.jpg" alt="Lots of fun with Wakaba">
-                <span class="cd-date">We took a photo with this mascot!</span>
+                <span class="cd-date">A challenger appears!</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
