--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -116,7 +116,7 @@
 
             <div class="cd-timeline-block">
               <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-Location.svg" alt="Location">
+                <img src="img/cd-icon-location.svg" alt="Location">
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
