--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -121,7 +121,7 @@
 
               <div class="cd-timeline-content">
                 <h2>日本旅行</h2>
-                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があると思います。日本では大阪のUSJ、池袋のポケモンセンターや秋葉原のメイドカフェに行ったり、本場のお寿司を食べたり、水族館に行ったり、川でのんびりしたり、他にもたくさんのことをしました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことをしました。将来は何ができるのか今から楽しみです。<br>
+                <p>2015年に悠が彼女の母国日本を案内してくれました。昔の友達や新しい友達にも会って素晴らしい時間を過ごすことができました。食べ物がとても美味しかったし、悠の家族は優しいし、文化がとても素敵だと思います。日本が本当に大好きです。日本には世界のどの国にもない魅力があると思います。日本では大阪のUSJ、池袋のポケモンセンターや秋葉原のメイドカフェに行ったり、本場のお寿司を食べたり、水族館に行ったり、川でのんびりしたり、他にもたくさんのことをしました！悠に会う前までは、やりたかったことは皆ただのリストに過ぎませんでしたが、出会ってから二人でとてもたくさんのことを実現できました。将来は何ができるのか今から楽しみです。<br>
                 <br>
                 -アレックス</p>
                 <span class="cd-date">Sept 2015</span>
