--- a/views/success.ejs
+++ b/views/success.ejs
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Thank you!</title>
+  <link rel="stylesheet" type="text/css" href="css/success.css">
 </head>
-
 <body>
-<div>
-  Thank you for saving a spot for our wedding! We can't wait to see you in Japan! 
-</div>
+  <div class="modal">
+    <h1>Thank you!</h1>
+    <p> Thank you for saving a spot for our wedding! We can't wait to see you in Japan</p>
+  </div>
 </body>
 </html>
