update success message

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div class="modal">
-    <h1>Thank you!</h1>
-    <p> Thank you for saving a spot for our wedding! We can't wait to see you in Japan</p>
+    <h1>参加予約ありがとうございます！！</h1>
+    <p>日本でお会いできるのを楽しみにしています！</p>
   </div>
 </body>
 </html>
