--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -4,9 +4,9 @@
     <title>A&H | Tying the Knot!</title>
     <!-- fonts -->
     <link rel="stylesheet" type="text/css" href="css/form.css">
-    <link rel="stylesheet" type="text/css" href="css/timeline.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/hamburger.css">
+    <link rel="stylesheet" type="text/css" href="css/timeline.minified.css">
+    <link rel="stylesheet" type="text/css" href="css/style.minified.css">
+    <link rel="stylesheet" type="text/css" href="css/hamburger.minified.css">
     <link rel="stylesheet" type="text/css" href="css/slideshow.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="url"                content="http://www.alexandharuka.com/jp" />
