reduce image size

--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -300,7 +300,7 @@
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/modernizr.js"></script>
+    <script src="js/modernizr.minified.js"></script>
     <script src="js/hamburger.js"></script>
   </body>
 </html>
