--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -178,13 +178,13 @@
         <div class="content">
           <h2>思い出の写真たち☆ </h2>
           <ul class="rslides min-height-600">
-            <li ><img src="img/slideshow/alex-birthday.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/anna-farewell.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/bench.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/cafe-japan.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/halloween.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/USJ.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/yellow-house.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/alex-birthday-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/anna-farewell-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/bench-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/cafe-japan-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/halloween-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/USJ-min.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/yellow-house-min.jpg" class="slider-img" ></li>
           </ul>
         </div>
       </section>
