--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ header {
   text-align: center;
   width: 100%;
   height: 90vh;
-  background: url("../img/slideshow/tree.jpg") no-repeat center center fixed;
+  background: url("../img/slideshow/tree-min.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
