remove un-needed photos, compress more images

--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -78,7 +78,7 @@
 
               <div class="cd-timeline-content">
                 <h2>ポットラック</h2>
-                <img style="width: 100%;" src="img/timeline/potluck.jpg" alt="Potluck at the yellow house">
+                <img style="width: 100%;" src="img/timeline/potluck-min.jpg" alt="Potluck at the yellow house">
                 <span class="cd-date">Potluck at the yellow house</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -107,7 +107,7 @@
 
               <div class="cd-timeline-content">
                 <h2>誕生日</h2>
-                <img style="width: 100%;" src="img/timeline/birthday.jpg" alt="Lots of fun with Wakaba">
+                <img style="width: 100%;" src="img/timeline/birthday-min.jpg" alt="Lots of fun with Wakaba">
                 <span class="cd-date">happiest birthday ever!</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -136,7 +136,7 @@
 
               <div class="cd-timeline-content">
                 <h2>日本旅行</h2>
-                <img style="width: 100%;" src="img/timeline/japan.jpg" alt="Lots of fun with Wakaba">
+                <img style="width: 100%;" src="img/timeline/japan-min.jpg" alt="Lots of fun with Wakaba">
                 <span class="cd-date">A challenger appears!</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -164,7 +164,7 @@
 
               <div class="cd-timeline-content">
                 <h2>バドミントン</h2>
-                <img style="width: 100%;" src="img/timeline/wakaba.jpg" alt="Lots of fun with Wakaba">
+                <img style="width: 100%;" src="img/timeline/wakaba-min.jpg" alt="Lots of fun with Wakaba">
                 <span class="cd-date">Lots of fun with Wakaba</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
