--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -213,12 +213,14 @@
         <h2>参加予約</h2>
         <form class="form-style-6" method="post">
           <p>
-            ご出席できる方はお名前とメールアドレス、参加人数を記入してください。<br>
-            食物アレルギーなど注意事項がありましたらメッセージ欄にご記入下さい。<br>
+            ご出席できる方は<u>お名前とメールアドレス、参加人数を記入してください。</u><br>
+            <u>食物アレルギー</u>など注意事項がありましたらメッセージ欄にご記入下さい。<br>
             その他メッセージがありましたら何でもご自由にお書き下さい。<br>
             パーティーは会費制になります。ご祝儀は不要です。<br>
             <br>
-            当日お会いできるのを楽しみにしています！
+            当日お会いできるのを楽しみにしています！<br>
+            <br>
+            ※参加人数は<u>半角数字</u>でお願いします。
           </p>
           <hr>
           <div>
@@ -230,7 +232,7 @@
 
           <div>
             <label class="desc" id="title3" for="email">
-              メールアドレス
+              メールアドレス（最終出欠確認や座席の連絡に使わせていただきます）
             </label>
             <div>
               <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="2">
